--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2102,6 +2102,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Sarnami jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Caribbean_Hindustani#Sarnami_Hindustani" target="_blank">Sarnami language</a></td>
+        <td>Chottá Rádjkoemár</td>
+        <td class="image"><a href="naslovna/sarnami.jpg" target="_blank"><img src="naslovna_th/sarnami.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sarnami.jpg" target="_blank"><img src="prva_th/sarnami.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Sejšelski kreolski</td>
         <td><a href="https://en.wikipedia.org/wiki/Seychellois_Creole" target="_blank">Seychellois Creole</a></td>
         <td>Pti Prens</td>
