--- a/index.html
+++ b/index.html
@@ -1288,15 +1288,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Kanegrate dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Canegrate" target="_blank">Italian, Canegrate dialect</a></td>
-        <td>https://en.wikipedia.org/wiki/Canegrate</td>
-        <td class="image"><a href="naslovna/italijanski-kanegrate.jpg" target="_blank"><img src="naslovna_th/italijanski-kanegrate.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/italijanski-kanegrate.jpg" target="_blank"><img src="prva_th/italijanski-kanegrate.jpg" width="50px"></a></td>
-      </tr>
-      <tr>
-        <td class="number"><span class="auto"></span></td>
-        <td>Italijanski, Kanegrate dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Canegrate" target="_blank">Italian, Canegrate dialect</a></td>
-        <td>https://en.wikipedia.org/wiki/Canegrate</td>
+        <td>ul principìn</td>
         <td class="image"><a href="naslovna/italijanski-kanegrate.jpg" target="_blank"><img src="naslovna_th/italijanski-kanegrate.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanski-kanegrate.jpg" target="_blank"><img src="prva_th/italijanski-kanegrate.jpg" width="50px"></a></td>
       </tr>
