--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -127,6 +127,14 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpski-latinica_vulkan10god.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_vulkan10god.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_vulkan10god.jpg" target="_blank"><img src="prva_th/srpski-latinica_vulkan10god.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin Graphic novel</a></td>
         <td>Mali princ strip</td>
         <td class="image"><a href="naslovna/srpski-latinica_strip.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_strip.jpg" width="50px"></a></td>
