--- a/index.html
+++ b/index.html
@@ -2158,6 +2158,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Ruski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Russian_language" target="_blank">Russian language</a></td>
+        <td>Маленький принц</td>
+        <td class="image"><a href="naslovna/ruski63.jpg" target="_blank"><img src="naslovna_th/ruski63.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ruski63.jpg" target="_blank"><img src="prva_th/ruski63.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Sambaša jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Sambahsa" target="_blank">Sambahsa language</a></td>
         <td>Is Lytil Prince</td>
