--- a/index.html
+++ b/index.html
@@ -1454,6 +1454,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Karačajsko-balkarski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Karachay-Balkar" target="_blank">Karachay-Balkar language</a></td>
+        <td>Гитче Принс</td>
+        <td class="image"><a href="naslovna/karacajsko-balkarski_cirilica.jpg" target="_blank"><img src="naslovna_th/karacajsko-balkarski_cirilica.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/karacajsko-balkarski_cirilica.jpg" target="_blank"><img src="prva_th/karacajsko-balkarski_cirilica.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Karakalpački jezk</td>
         <td><a href="https://en.wikipedia.org/wiki/Karakalpak_language" target="_blank">Karakalpak language</a></td>
         <td>Кишкене шаҳзада</td>
