--- a/index.html
+++ b/index.html
@@ -2348,6 +2348,14 @@
         <td class="image"><a href="naslovna/spanski-gaceria_sleng.jpg" target="_blank"><img src="naslovna_th/spanski-gaceria_sleng.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spanski-gaceria_sleng.jpg" target="_blank"><img src="prva_th/spanski-gaceria_sleng.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Španski Lunfardo</td>
+        <td><a href="https://en.wikipedia.org/wiki/Lunfardo" target="_blank">Spanish Lunfardo</a></td>
+        <td>El Principito</td>
+        <td class="image"><a href="naslovna/spanski-lunfardo.jpg" target="_blank"><img src="naslovna_th/spanski-lunfardo.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski-lunfardo.jpg" target="_blank"><img src="prva_th/spanski-lunfardo.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Švedski jezik</td>
