--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2310,6 +2310,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Španski Lunfardo</td>
+        <td><a href="https://en.wikipedia.org/wiki/Lunfardo" target="_blank">Spanish Lunfardo</a></td>
+        <td>El Principito</td>
+        <td class="image"><a href="naslovna/spanski-lunfardo.jpg" target="_blank"><img src="naslovna_th/spanski-lunfardo.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski-lunfardo.jpg" target="_blank"><img src="prva_th/spanski-lunfardo.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Švedski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Swedish_language" target="_blank">Swedish language</a></td>
         <td>Lille prinsen</td>
