--- a/index.html
+++ b/index.html
@@ -2110,6 +2110,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Romanš - puter dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Put%C3%A8r" target="_blank">Romansh putèr</a></td>
+        <td>Il Pitschen Prinz</td>
+        <td class="image"><a href="naslovna/puter-surmiranski.jpg" target="_blank"><img src="naslovna_th/romans-puter.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romans-puter.jpg" target="_blank"><img src="prva_th/romans-puter.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Romanš - surmiranski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Surmiran_dialect" target="_blank">Romansh surmiran</a></td>
         <td>Igl Pitschen Prenzi</td>
@@ -2118,7 +2126,7 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Romanš - surselvanski dijalekt</td>
+        <td>Romanš - sursilvanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Sursilvan" target="_blank">Romansh sursilvan</a></td>
         <td>Il Prenci Pignet</td>
         <td class="image"><a href="naslovna/romans-surselvanski.jpg" target="_blank"><img src="naslovna_th/romans-surselvanski.jpg" width="50px"></a></td>
