--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2067,6 +2067,14 @@
         <td>Ař Picin Prinsi</td>
         <td class="image"><a href="naslovna/royase.jpg" target="_blank"><img src="naslovna_th/royase.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/royase.jpg" target="_blank"><img src="prva_th/royase.jpg" width="50px"></a></td>
+     </tr>
+     <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Romanš - puter dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Put%C3%A8r" target="_blank">Romansh putèr</a></td>
+        <td>Il Pitschen Prinz</td>
+        <td class="image"><a href="naslovna/puter-surmiranski.jpg" target="_blank"><img src="naslovna_th/romans-puter.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romans-puter.jpg" target="_blank"><img src="prva_th/romans-puter.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
