--- a/index.html
+++ b/index.html
@@ -1318,6 +1318,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Folinjo dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Foligno" target="_blank">Italian, Foligno dialect</a></td>
+        <td>Lu Pringipe fandillu</td>
+        <td class="image"><a href="naslovna/italijanski-folinjo.jpg" target="_blank"><img src="naslovna_th/italijanski-folinjo.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-folinjo.jpg" target="_blank"><img src="prva_th/italijanski-folinjo.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Kanegrate dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Canegrate" target="_blank">Italian, Canegrate dialect</a></td>
         <td>ul principìn</td>
@@ -2113,7 +2121,7 @@
         <td>Romanš - puter dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Put%C3%A8r" target="_blank">Romansh putèr</a></td>
         <td>Il Pitschen Prinz</td>
-        <td class="image"><a href="naslovna/puter-surmiranski.jpg" target="_blank"><img src="naslovna_th/romans-puter.jpg" width="50px"></a></td>
+        <td class="image"><a href="naslovna/puter-puter.jpg" target="_blank"><img src="naslovna_th/romans-puter.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/romans-puter.jpg" target="_blank"><img src="prva_th/romans-puter.jpg" width="50px"></a></td>
       </tr>
       <tr>
