--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2081,7 +2081,7 @@
         <td>Romanš - puter dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Put%C3%A8r" target="_blank">Romansh putèr</a></td>
         <td>Il Pitschen Prinz</td>
-        <td class="image"><a href="naslovna/puter-puter.jpg" target="_blank"><img src="naslovna_th/romans-puter.jpg" width="50px"></a></td>
+        <td class="image"><a href="naslovna/romans-puter.jpg" target="_blank"><img src="naslovna_th/romans-puter.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/romans-puter.jpg" target="_blank"><img src="prva_th/romans-puter.jpg" width="50px"></a></td>
       </tr>
       <tr>
