--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1262,6 +1262,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Apulsko-Barski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Barese_dialect" target="_blank">Italian, apulo-Barese dialect</a></td>
+        <td>U Prengepine</td>
+        <td class="image"><a href="naslovna/italijanski-apulo-barski.jpg" target="_blank"><img src="naslovna_th/italijanski-apulo-barski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-apulo-barski.jpg" target="_blank"><img src="prva_th/italijanski-apulo-barski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Bolonjski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Languages_of_Italy" target="_blank">Italian, Bolognese dialect</a></td>
         <td>Al Pränzip Fangén</td>
