--- a/index.html
+++ b/index.html
@@ -1303,7 +1303,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Apulsko-Barski dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Barese_dialect" target="_blank">Italian, apulo-Barese dialect</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Barese_dialect" target="_blank">Italian, Apulo-Barese dialect</a></td>
         <td>U Prengepine</td>
         <td class="image"><a href="naslovna/italijanski-apulo-barski.jpg" target="_blank"><img src="naslovna_th/italijanski-apulo-barski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanski-apulo-barski.jpg" target="_blank"><img src="prva_th/italijanski-apulo-barski.jpg" width="50px"></a></td>
