--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -924,6 +924,14 @@
         <td class="image"><a href="naslovna/esperanto.jpg" target="_blank"><img src="naslovna_th/esperanto.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/esperanto.jpg" target="_blank"><img src="prva_th/esperanto.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Esperanto 1894</td>
+        <td><a href="https://en.wikipedia.org/wiki/Reformed_Esperanto" target="_blank">Esperanto 1894</a></td>
+        <td>Ete Prinzo</td>
+        <td class="image"><a href="naslovna/esperanto-1894.jpg" target="_blank"><img src="naslovna_th/esperanto-1894.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/esperanto-1894.jpg" target="_blank"><img src="prva_th/esperanto-1894.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Estonski jezik</td>
