--- a/index.html
+++ b/index.html
@@ -2166,6 +2166,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Romanš - sutsilvanski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Romansh_language#Dialects" target="_blank">Romansh sutsilvan</a></td>
+        <td>Igl Prenzi Pintg</td>
+        <td class="image"><a href="naslovna/romans-sutsilvanski.jpg" target="_blank"><img src="naslovna_th/romans-sutsilvanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romans-sutsilvanski.jpg" target="_blank"><img src="prva_th/romans-sutsilvanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Romanš - valader dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Vallader_dialect" target="_blank">Romansh vallader</a></td>
         <td>Il Pitschen Prinzi</td>
