--- a/index.html
+++ b/index.html
@@ -1422,6 +1422,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, dijalekt Urbanije</td>
+        <td><a href="https://en.wikipedia.org/wiki/Urbania" target="_blank">Italian, Urbania dialect</a></td>
+        <td>El Principìn</td>
+        <td class="image"><a href="naslovna/italijanski-urbanija.jpg" target="_blank"><img src="naslovna_th/italijanski-urbanija.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-urbanija.jpg" target="_blank"><img src="prva_th/italijanski-urbanija.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Jakutski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Yakut_language" target="_blank">Yakut language</a></td>
         <td>Кыра тыгын</td>
