--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1380,6 +1380,14 @@
         <td class="image"><a href="naslovna/italijanski-trst.jpg" target="_blank"><img src="naslovna_th/italijanski-trst.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanski-trst.jpg" target="_blank"><img src="prva_th/italijanski-trst.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, dijalekt Urbanije</td>
+        <td><a href="https://en.wikipedia.org/wiki/Urbania" target="_blank">Italian, Urbania dialect</a></td>
+        <td>El Principìn</td>
+        <td class="image"><a href="naslovna/italijanski-urbanija.jpg" target="_blank"><img src="naslovna_th/italijanski-urbanija.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-urbanija.jpg" target="_blank"><img src="prva_th/italijanski-urbanija.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Jakutski jezik</td>
