--- a/index.html
+++ b/index.html
@@ -2446,6 +2446,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tajlandski, Sukotai jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sukhothai_script" target="_blank">Thai, Sukhothai script</a></td>
+        <td></td>
+        <td class="image"><a href="naslovna/tajlandski-sukotajski.jpg" target="_blank"><img src="naslovna_th/tajlandski-sukotajski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tajlandski-sukotajski.jpg" target="_blank"><img src="prva_th/tajlandski-sukotajski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Tamašek (Tuareški) jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tamasheq_language" target="_blank">Tamasheq (Tuareg) languages</a></td>
         <td>ⴴⵟⵀⵍ</td>
