--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2404,6 +2404,14 @@
         <td class="image"><a href="naslovna/tajlandski2.jpg" target="_blank"><img src="naslovna_th/tajlandski2.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/tajlandski2.jpg" target="_blank"><img src="prva_th/tajlandski2.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Tajlandski, Sukotai jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sukhothai_script" target="_blank">Thai, Sukhothai script</a></td>
+        <td></td>
+        <td class="image"><a href="naslovna/tajlandski-sukotajski.jpg" target="_blank"><img src="naslovna_th/tajlandski-sukotajski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tajlandski-sukotajski.jpg" target="_blank"><img src="prva_th/tajlandski-sukotajski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Tamašek (Tuareški) jezik</td>
