--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1926,6 +1926,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački švapski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Swabian_German" target="_blank">German Swabian dialect</a></td>
+        <td>Dr kleine Prinz</td>
+        <td class="image"><a href="naslovna/nemacki-svapski.jpg" target="_blank"><img src="naslovna_th/nemacki-svapski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki-svapski.jpg" target="_blank"><img src="prva_th/nemacki-svapski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački jezik, Vogelsberg dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/German_language" target="_blank">German from Vogelsberg</a></td>
         <td>De klee Prinz</td>
