--- a/index.html
+++ b/index.html
@@ -2670,6 +2670,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Vajunaiki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Wayuu_language" target="_blank">Wayuunaiki</a></td>
+        <td>Pürinsipechonkai</td>
+        <td class="image"><a href="naslovna/vajunaiki.jpg" target="_blank"><img src="naslovna_th/vajunaiki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/vajunaiki.jpg" target="_blank"><img src="prva_th/vajunaiki.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Valensijanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Valencian_language" target="_blank">Valencian language</a></td>
         <td>El Chicotet Príncip</td>
