--- a/index.html
+++ b/index.html
@@ -1268,6 +1268,14 @@
         <td class="image"><a href="naslovna/hrvatski-zminjska_cakavica.jpg" target="_blank"><img src="naslovna_th/hrvatski-zminjska_cakavica.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/hrvatski-zminjska_cakavica.jpg" target="_blank"><img src="prva_th/hrvatski-zminjska_cakavica.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Ilokano jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ilocano_language" target="_blank">Ilocano language</a></td>
+        <td>Ti Bassit a Prinsipe</td>
+        <td class="image"><a href="naslovna/ilokano.jpg" target="_blank"><img src="naslovna_th/ilokano.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ilokano.jpg" target="_blank"><img src="prva_th/ilokano.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Indonežanski jezik</td>
