--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1230,6 +1230,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Ilokano jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ilocano_language" target="_blank">Ilocano language</a></td>
+        <td>Ti Bassit a Prinsipe</td>
+        <td class="image"><a href="naslovna/ilokano.jpg" target="_blank"><img src="naslovna_th/ilokano.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ilokano.jpg" target="_blank"><img src="prva_th/ilokano.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Indonežanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Indonesian_language" target="_blank">Indonesian language</a></td>
         <td>Si Pangeran Kecil</td>
