--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1718,6 +1718,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Lule Sami jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Lule_S%C3%A1mi" target="_blank">Lule Sami language</a></td>
+        <td>Unna prinsasj</td>
+        <td class="image"><a href="naslovna/lule-sami.jpg" target="_blank"><img src="naslovna_th/lule-sami.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/lule-sami.jpg" target="_blank"><img src="prva_th/lule-sami.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Mađarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Hungarian_language" target="_blank">Hungarian language</a></td>
         <td>A Kis herceg</td>
