--- a/index.html
+++ b/index.html
@@ -2102,6 +2102,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Poliglot</td>
+        <td><a href="https://en.wikipedia.org/wiki/Polyglot_(book)" target="_blank">Polyglot</a></td>
+        <td>Le Petit Prince</td>
+        <td class="image"><a href="naslovna/poliglot.jpg" target="_blank"><img src="naslovna_th/poliglot.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/poliglot.jpg" target="_blank"><img src="prva_th/poliglot.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Poljski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Polish_language" target="_blank">Polish language</a></td>
         <td>Mały Książę</td>
