--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -485,6 +485,14 @@
         <td class="image"><a href="prva/srpski-cirilica_pcelica2.jpg" target="_blank"><img src="prva_th/srpski-cirilica_pcelica2.jpg" width="50px"></a></td>
       </tr>
       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
+        <td>Мали принц</td>
+        <td class="image"><a href="naslovna/srpski-cirilica_laguna2023.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_laguna2023.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-cirilica_laguna2023.jpg" target="_blank"><img src="prva_th/srpski-cirilica_laguna2023.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
        <td class="number"><span class="auto"></span></td>
        <td>Srpski ćirilica 3D</td>
        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic Pop-Up book</a></td>
