--- a/index.html
+++ b/index.html
@@ -1486,6 +1486,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Jamski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/J%C3%A4mtland_dialects#Name" target="_blank">Jamska dialect</a></td>
+        <td>Lillhprins'n</td>
+        <td class="image"><a href="naslovna/jamska.jpg" target="_blank"><img src="naslovna_th/jamska.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/jamska.jpg" target="_blank"><img src="prva_th/jamska.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Japanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Japanese_language" target="_blank">Japanese language</a></td>
         <td>星の王子さま</td>
