--- a/index.html
+++ b/index.html
@@ -1214,6 +1214,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Haketski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Haketia" target="_blank">Haketia language</a></td>
+        <td>El Prencipito</td>
+        <td class="image"><a href="naslovna/haketia.jpg" target="_blank"><img src="naslovna_th/haketia.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/haketia.jpg" target="_blank"><img src="prva_th/haketia.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hantec sleng</td>
         <td><a href="https://en.wikipedia.org/wiki/Hantec_slang" target="_blank">Hantec slang</a></td>
         <td>Malé principál</td>
