--- a/index.html
+++ b/index.html
@@ -2460,6 +2460,14 @@
         <td class="image"><a href="naslovna/spanskimini.jpg" target="_blank"><img src="naslovna_th/spanskimini.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spanskimini.jpg" target="_blank"><img src="prva_th/spanskimini.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Španski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Spanish_language" target="_blank">Spanish language</a></td>
+        <td>El Principito</td>
+        <td class="image"><a href="naslovna/spanski_mini.jpg" target="_blank"><img src="naslovna_th/spanski_mini.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski_mini.jpg" target="_blank"><img src="prva_th/spanski_mini.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Španski Andaluzijski Sijera Magine</td>
