--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -566,6 +566,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Srpski ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
+        <td>Мали принц</td>
+        <td class="image"><a href="naslovna/srpski-cirilica_dexico2.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_dexico2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-cirilica_dexico2.jpg" target="_blank"><img src="prva_th/srpski-cirilica_dexico2.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Afrikans jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Afrikaans" target="_blank">Afrikaans language</a></td>
         <td>Die Klein Prinsie</td>
