--- a/index.html
+++ b/index.html
@@ -790,6 +790,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Bemba jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bemba_language" target="_blank">Bemba language</a></td>
+        <td>Akana kamfumu</td>
+        <td class="image"><a href="naslovna/bemba.jpg" target="_blank"><img src="naslovna_th/bemba.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bemba.jpg" target="_blank"><img src="prva_th/bemba.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Bosanski jezik ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
         <td>Мали принц</td>
