--- a/index.html
+++ b/index.html
@@ -900,6 +900,14 @@
         <td class="image"><a href="naslovna/ciriski.jpg" target="_blank"><img src="naslovna_th/ciriski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/ciriski.jpg" target="_blank"><img src="prva_th/ciriski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Čamoro jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chamorro_language" target="_blank">Chamorro language</a></td>
+        <td>I Dikkiki' na Prinsipi</td>
+        <td class="image"><a href="naslovna/čamoro.jpg" target="_blank"><img src="naslovna_th/čamoro.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/čamoro.jpg" target="_blank"><img src="prva_th/čamoro.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Čavakano jezik</td>
