--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -862,6 +862,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Čamoro jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chamorro_language" target="_blank">Chamorro language</a></td>
+        <td>I Dikkiki' na Prinsipi</td>
+        <td class="image"><a href="naslovna/čamoro.jpg" target="_blank"><img src="naslovna_th/čamoro.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/čamoro.jpg" target="_blank"><img src="prva_th/čamoro.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Čavakano jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Chavacano" target="_blank">Chavacano language</a></td>
         <td>El Diutay principe </td>
