--- a/index.html
+++ b/index.html
@@ -2428,6 +2428,14 @@
         <td class="image"><a href="naslovna/slovenacki.jpg" target="_blank"><img src="naslovna_th/slovenacki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/slovenacki.jpg" target="_blank"><img src="prva_th/slovenacki.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Somalski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Somali_language" target="_blank">Somali language</a></td>
+        <td>Wül yar oo Amür ah</td>
+        <td class="image"><a href="naslovna/somalski.jpg" target="_blank"><img src="naslovna_th/somalski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/somalski.jpg" target="_blank"><img src="prva_th/somalski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Staroegipatski jezik</td>
