--- a/index.html
+++ b/index.html
@@ -1750,6 +1750,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Komorski Anžuan jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Comorian_languages" target="_blank">Comorian Anjouan language</a></td>
+        <td>Mwana wa shiufalume</td>
+        <td class="image"><a href="naslovna/komorskianzuan.jpg" target="_blank"><img src="naslovna_th/komorskianzuan.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/komorskianzuan.jpg" target="_blank"><img src="prva_th/komorskianzuan.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Korejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Korean_language" target="_blank">Korean language</a></td>
         <td>어린 왕자</td>
