--- a/index.html
+++ b/index.html
@@ -2086,6 +2086,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Uri dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Canton_of_Uri" target="_blank">German Uri dialect</a></td>
+        <td>Dr Chlii Prinz</td>
+        <td class="image"><a href="naslovna/nemacki-uri.jpg" target="_blank"><img src="naslovna_th/nemacki-uri.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki-uri.jpg" target="_blank"><img src="prva_th/nemacki-uri.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački jezik, Vogelsberg dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/German_language" target="_blank">German from Vogelsberg</a></td>
         <td>De klee Prinz</td>
