--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2734,6 +2734,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tvents jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tweants_dialect" target="_blank">Tweants dialect</a></td>
+        <td>Et Heanige Preenske</td>
+        <td class="image"><a href="naslovna/holandski_tvents-dijalekt.jpg" target="_blank"><img src="naslovna_th/holandski_tvents-dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/holandski_tvents-dijalekt.jpg" target="_blank"><img src="prva_th/holandski_tvents-dijalekt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Udegejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Udege_language" target="_blank">Udege language</a></td>
         <td>Ница принцэ</td>
