--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1318,6 +1318,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Gradišćanskohrvatski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Burgenland_Croatian" target="_blank">Burgenland Croatian language</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/gradiscanskohrvatski.jpg" target="_blank"><img src="naslovna_th/gradiscanskohrvatski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/gradiscanskohrvatski.jpg" target="_blank"><img src="prva_th/gradiscanskohrvatski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hrvatski kajkavski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kajkavian" target="_blank">Kajkavian</a></td>
         <td>Mali Kralevič</td>
