--- a/index.html
+++ b/index.html
@@ -1918,6 +1918,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Majanski Jukatanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Yucatec_Maya_language" target="_blank">Yucatec Maya language</a></td>
+        <td>Chan Ajaw</td>
+        <td class="image"><a href="naslovna/majanski-jukatan.jpg" target="_blank"><img src="naslovna_th/majanski-jukatan.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/majanski-jukatan.jpg" target="_blank"><img src="prva_th/majanski-jukatan.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Majanski Kakčikel</td>
         <td><a href="https://en.wikipedia.org/wiki/Kaqchikel_language" target="_blank">Mayan Kaqchikel language</a></td>
         <td>Ri ch'uti'ajpop</td>
