--- a/index.html
+++ b/index.html
@@ -2444,6 +2444,14 @@
         <td class="image"><a href="naslovna/sarnami.jpg" target="_blank"><img src="naslovna_th/sarnami.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/sarnami.jpg" target="_blank"><img src="prva_th/sarnami.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Sebuano ili Sebuanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cebuano_language" target="_blank">Cebuano language</a></td>
+        <td>Ang Gamay nga Prinsipe</td>
+        <td class="image"><a href="naslovna/sebuano.jpg" target="_blank"><img src="naslovna_th/sebuano.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sebuano.jpg" target="_blank"><img src="prva_th/sebuano.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Sejšelski kreolski</td>
