--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2406,6 +2406,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Sebuano ili Sebuanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cebuano_language" target="_blank">Cebuano language</a></td>
+        <td>Ang Gamay nga Prinsipe</td>
+        <td class="image"><a href="naslovna/sebuano.jpg" target="_blank"><img src="naslovna_th/sebuano.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sebuano.jpg" target="_blank"><img src="prva_th/sebuano.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Sejšelski kreolski</td>
         <td><a href="https://en.wikipedia.org/wiki/Seychellois_Creole" target="_blank">Seychellois Creole</a></td>
         <td>Pti Prens</td>
