--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2222,6 +2222,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Poljski, Kurpie dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kurpie_dialect" target="_blank">Kurpie dialect</a></td>
+        <td>Mały Kśëç</td>
+        <td class="image"><a href="naslovna/poljski-kurpie.jpg" target="_blank"><img src="naslovna_th/poljski-kurpie.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/poljski-kurpie.jpg" target="_blank"><img src="prva_th/poljski-kurpie.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Poljski, Podhale dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Dialects_of_Polish" target="_blank">Polish, Podhale dialect</a></td>
         <td>Mały Królewic</td>
