--- a/index.html
+++ b/index.html
@@ -1702,6 +1702,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Katalonski, Valensijanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Valencian_language" target="_blank">Catalan Valencian language</a></td>
+        <td>El princepet</td>
+        <td class="image"><a href="naslovna/katalonski-valensijanski.jpg" target="_blank"><img src="naslovna_th/katalonski-valensijanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/katalonski-valensijanski.jpg" target="_blank"><img src="prva_th/katalonski-valensijanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kečua jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Quechuan_languages" target="_blank">Quechuan language</a></td>
         <td>Quyllur Llaqtayuq Wawawanta</td>
