--- a/index.html
+++ b/index.html
@@ -2620,6 +2620,14 @@
         <td class="image"><a href="naslovna/spanski-gaceria_sleng.jpg" target="_blank"><img src="naslovna_th/spanski-gaceria_sleng.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spanski-gaceria_sleng.jpg" target="_blank"><img src="prva_th/spanski-gaceria_sleng.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Španski jezik iz Kordobe</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cordob%C3%A9s_Spanish#:~:text=Cordoban%20Spanish%20is%20a%20regional,Argentine%20media%20and%20popular%20culture." target="_blank"> Cordoban Spanish language</a></td>
+        <td>El Principito</td>
+        <td class="image"><a href="naslovna/spanski-kordoba.jpg" target="_blank"><img src="naslovna_th/spanski-kordoba.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski-kordoba.jpg" target="_blank"><img src="prva_th/spanski-kordoba.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Španski Lunfardo</td>
