--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2582,6 +2582,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Španski jezik iz Kordobe</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cordob%C3%A9s_Spanish#:~:text=Cordoban%20Spanish%20is%20a%20regional,Argentine%20media%20and%20popular%20culture." target="_blank"> Cordoban Spanish language</a></td>
+        <td>El Principito</td>
+        <td class="image"><a href="naslovna/spanski-kordoba.jpg" target="_blank"><img src="naslovna_th/spanski-kordoba.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski-kordoba.jpg" target="_blank"><img src="prva_th/spanski-kordoba.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Španski Lunfardo</td>
         <td><a href="https://en.wikipedia.org/wiki/Lunfardo" target="_blank">Spanish Lunfardo</a></td>
         <td>El Principito</td>
