--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1398,6 +1398,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski jezik(napisan u rimi)</td>
+        <td><a href="https://en.wikipedia.org/wiki/Italian_language" target="_blank">Italian language</a></td>
+        <td>Il Piccolo Principe in rima</td>
+        <td class="image"><a href="naslovna/italijanski-ustihu.jpg" target="_blank"><img src="naslovna_th/italijanski-ustihu.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-ustihu.jpg" target="_blank"><img src="prva_th/italijanski-ustihu.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Apulsko-Barski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Barese_dialect" target="_blank">Italian, Apulo-Barese dialect</a></td>
         <td>U Prengepine</td>
