--- a/index.html
+++ b/index.html
@@ -2030,6 +2030,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Mastrihtski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Maastrichtian_dialect#:~:text=Maastrichtian%20(Limburgish%3A%20Mestreechs%20%5Bm%C9%99%CB%88st%CA%80e%CB%90xs,it%20is%20not%20mutually%20intelligible)." target="_blank">Maastrichtian dialect</a></td>
+        <td>'t Klein Prinske</td>
+        <td class="image"><a href="naslovna/mastrihtiski.jpg" target="_blank"><img src="naslovna_th/mastrihtiski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/mastrihtiski.jpg" target="_blank"><img src="prva_th/mastrihtiski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Međuslovenski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Interslavic" target="_blank">Interslavic language</a></td>
         <td>Maly Princ</td>
