--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -966,6 +966,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Džerzijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/J%C3%A8rriais" target="_blank">Jèrriais language</a></td>
+        <td>Lé P'tit Prînce</td>
+        <td class="image"><a href="naslovna/dzerzijski.jpg" target="_blank"><img src="naslovna_th/dzerzijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/dzerzijski.jpg" target="_blank"><img src="prva_th/dzerzijski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Džongka jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Dzongkha" target="_blank">Dzongkha language</a></td>
         <td>(Gyalse Zhan Nu)</td>
