--- a/index.html
+++ b/index.html
@@ -2460,6 +2460,14 @@
         <td class="image"><a href="naslovna/sambasa.jpg" target="_blank"><img src="naslovna_th/sambasa.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/sambasa.jpg" target="_blank"><img src="prva_th/sambasa.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Samogitski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Samogitian_language" target="_blank">Samogitian language</a></td>
+        <td>Mažāsis Princos</td>
+        <td class="image"><a href="naslovna/samogitski.jpg" target="_blank"><img src="naslovna_th/samogitski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/samogitski.jpg" target="_blank"><img src="prva_th/samogitski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Sango jezik</td>
