--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2422,6 +2422,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Samogitski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Samogitian_language" target="_blank">Samogitian language</a></td>
+        <td>Mažāsis Princos</td>
+        <td class="image"><a href="naslovna/samogitski.jpg" target="_blank"><img src="naslovna_th/samogitski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/samogitski.jpg" target="_blank"><img src="prva_th/samogitski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Sango jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Sango_language" target="_blank">Sango language</a></td>
         <td>Kété Gbia</td>
