--- a/index.html
+++ b/index.html
@@ -2870,6 +2870,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tuvaluanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tuvaluan_language" target="_blank">Tuvaluan language</a></td>
+        <td>Te Pelenise Foliki</td>
+        <td class="image"><a href="naslovna/tuvaluanski.jpg" target="_blank"><img src="naslovna_th/tuvaluanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tuvaluanski.jpg" target="_blank"><img src="prva_th/tuvaluanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Tuvinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tuvan_language" target="_blank">Tuvan language</a></td>
         <td>Бичии Тажьі</td>
