--- a/index.html
+++ b/index.html
@@ -2790,6 +2790,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tuamotuanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tuamotuan_language" target="_blank">Tuamotuan language</a></td>
+        <td>Te Arikiriki</td>
+        <td class="image"><a href="naslovna/tuamotuanski.jpg" target="_blank"><img src="naslovna_th/tuamotuanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tuamotuanski.jpg" target="_blank"><img src="prva_th/tuamotuanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Turkmenski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Turkmen_language" target="_blank">Turkmen language</a></td>
         <td>Kiçijik Şazada</td>
