--- a/index.html
+++ b/index.html
@@ -942,6 +942,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Čami Embera jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chami_language" target="_blank">Chami Embera language</a></td>
+        <td>Chi charcheke</td>
+        <td class="image"><a href="naslovna/camiembera.jpg" target="_blank"><img src="naslovna_th/camiembera.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/camiembera.jpg" target="_blank"><img src="prva_th/camiembera.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Čamoro jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Chamorro_language" target="_blank">Chamorro language</a></td>
         <td>I Dikkiki' na Prinsipi</td>
