--- a/index.html
+++ b/index.html
@@ -1990,6 +1990,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Majanski Mopan jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Mopan_language" target="_blank">Mayan Mopan language</a></td>
+        <td>Ah Nene’ Yum</td>
+        <td class="image"><a href="naslovna/majanski-mopan.jpg" target="_blank"><img src="naslovna_th/majanski-mopan.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/majanski-mopan.jpg" target="_blank"><img src="prva_th/majanski-mopan.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Majanski Tojolabal</td>
         <td><a href="https://en.wikipedia.org/wiki/Tojolab%CA%BCal_language" target="_blank">Mayan Tojolab'al language</a></td>
         <td>Yal ch'in ajwalal</td>
